<resources>
    <string name="app_name">V-Bazzar</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="email">email</string>
    <string name="address">address</string>
    <string name="PhoneNumber">phonenumber</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">logout</string>
    <string name="Signout">Logout</string>
    <string name="signout">signout</string>
    <string name="Log_out">Logout</string>
    <string name="signOut">SignOut</string>
    <string name="logOut">logOut</string>
    <string name="landingPageText">BUY GROCERIES EASILY WITH US</string>
    <string name="getStarted">Get Started</string>
    <string name="name">Name:name</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="description">Description:</string>
    <string name="enter_product_description">Enter product description</string>
    <string name="price">Price:</string>
    <string name="enter_product_price">Enter product price</string>
    <string name="image">Image:</string>
    <string name="product_of_image">product of image</string>
    <string name="add_product">Add Product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="Add_product">ADD PRODUCT</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="dd_product">Add Product</string>
    <string name="logoutBtn">logoutBtn</string>
    <string name="addProductBtn">addProductBtn</string>
    <string name="Namee">Name</string>
    <string name="shop_name">shop Name</string>
    <string name="Email">Email</string>
    <string name="add_product">Add Product</string>
    <string name="backBtn">backBtn</string>
</resources>