<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".AddProductActivity">

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_text_view"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_product_name"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:autofillHints=""
        android:inputType="textAutoCorrect"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_edit_text"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_text_view"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_product_description"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        android:inputType="textAutoCorrect"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_edit_text"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/price_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_text_view"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_product_price"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize"
        android:autofillHints="" />

    <TextView
        android:id="@+id/image_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/price_edit_text"
        android:layout_marginTop="18dp"
        android:text="@string/image"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/product_image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/image_text_view"
        android:layout_marginTop="21dp"
        android:contentDescription="@string/product_of_image"
        android:padding="16dp"
        android:src="@drawable/ic_launcher_background"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/product_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary_color"
        android:minHeight="48dp"
        android:text="@string/add_product"
        android:textColor="#ffffff"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>
