<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Registration">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="20sp"
      android:gravity="center"
      android:text="@string/register"
      android:textSize="20sp"
      android:textStyle="bold" />

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/username"
        android:padding="10dp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/email"
        android:padding="10dp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/address"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/address"
        android:padding="10dp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/PhoneNumber"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/PhoneNumber"
        android:padding="10dp" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:inputType="textPassword"/>
  </com.google.android.material.textfield.TextInputLayout>

  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone" />

  <Button
      android:id="@+id/btn_register"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:contentDescription="@string/register"
      android:text="@string/register"
      android:textSize="20sp" />
  <TextView
      android:textStyle="bold"
      android:textSize="20sp"
      android:gravity="center"
      android:layout_marginTop="20dp"
      android:id="@+id/loginNow"
      android:text="@string/click_to_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

</LinearLayout>